# aoer-wled-doppler

./: Cargo.toml  README.md  _build.rs
.github/workflows/: rust.yml
resources/: aoer_logo_2018.xcf
src/: config.rs  ledfx-trigger.rs  ledfx.rs  main.rs  monitor.rs  spotify.rs  systray.rs  types.rs  ui.rs  uimock.rs  util.rs  webui.rs  webui_content.rs
systemd/: wled-doppler.service
webview/aoer-wled-doppler-web/: README.md  index.html  npm-shrinkwrap.json  package.json  vite.config.js
webview/aoer-wled-doppler-web/public/json/: config
webview/aoer-wled-doppler-web/src/: App.vue  main.js
webview/aoer-wled-doppler-web/src/components/: timesetter.vue
